[tool.poetry]
name = "bits_and_bytes.py"
version = "0.1.0"
description = "\"Scripts for a workshop on handling binary data in python.\""
authors = ["Niklas Beierl <me@niklasbeierl.io>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.22.0"
tqdm = "^4.62.3"
memory-profiler = "^0.60.0"

[tool.poetry.dev-dependencies]
black = "^21.12b0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
